Keyboard input is broken
Information
flatpak info org.gnome.TextEditor.Devel
Text Editor - A Text Editor for GNOME
ID: org.gnome.TextEditor.Devel
Ref: app/org.gnome.TextEditor.Devel/x86_64/master
Arch: x86_64
Branch: master
Version: 41.0
License: GPL-3.0-or-later
Origin: gnome-nightly
Collection: org.gnome.Nightly
Installation: system
Installed: 4.3 MB
Runtime: org.gnome.Platform/x86_64/master
Sdk: org.gnome.Sdk/x86_64/master
Commit: 576d6d31ddba0c3f1e7cd6f65fd9df00006192a928d93c56ef1fb9d8f6f62c59
Parent: 8d1c74a3746bb3520636aed91b8a29c9c578667d7dcdf31bcd46a4cb170fb90f
Subject: Export org.gnome.TextEditor.Devel
Date: 2021-10-30 19:49:29 +0000
flatseal shows that everything is resetted
flatpak --version
Flatpak 1.12.2
cat /etc/os-release
PRETTY_NAME="Debian GNU/Linux bookworm/sid"
NAME="Debian GNU/Linux"
ID=debian
HOME_URL="https://www.debian.org/"
SUPPORT_URL="https://www.debian.org/support"
BUG_REPORT_URL="https://bugs.debian.org/"
gnome-shell --version
GNOME Shell 41.0
Problem
layout in the TextEditor does not follow what is chosen in the main bar on top of the screen of gnome
I'm using two different layout on my desktop
- swiss french
- bépo
What ever I do, I still have the bépo
layout
The SHIFT does not work
I'm not able to access all the key with the SHIFT
key RETURN, BACKSPACE, arrows does not work
I can not use these keys (backspace
and shift
, arrows)
flatpak run -v org.gnome.TextEditor.Devel
F: No installations directory in /etc/flatpak/installations.d. Skipping
F: Opening system flatpak installation at path /var/lib/flatpak
F: Opening user flatpak installation at path /home/briner/.local/share/flatpak
F: Opening user flatpak installation at path /home/briner/.local/share/flatpak
F: Opening system flatpak installation at path /var/lib/flatpak
F: Opening user flatpak installation at path /home/briner/.local/share/flatpak
F: Opening system flatpak installation at path /var/lib/flatpak
F: /var/lib/flatpak/runtime/org.gnome.Platform/x86_64/master/8a54d12c271bb1f75c41f2cdbedda04d13a4949bf34683fd3895ca0e4f838983/files/lib32 does not exist
F: Cleaning up unused container id 4133581956
F: Cleaning up per-app-ID state for org.gnome.TextEditor.Devel
F: Allocated instance id 897143699
F: Add defaults in dir /org/gnome/TextEditor/Devel/
F: Add locks in dir /org/gnome/TextEditor/Devel/
F: Disallowing network access
F: Allowing dri access
F: Allowing host-fs access
F: skipping export for path /usr/libx32
F: Allowing wayland access
F: Running 'bwrap --args 39 xdg-dbus-proxy --args=41'
F: Running 'bwrap --args 39 gnome-text-editor'
the other flatpak tools works
On other tools that I do have on flatpak.. everything works
Edited by Alice Mikhaylenko